manifest/be/be-service.yml
apiVersion: v1
kind: Service
metadata:
  name: beeshoes-be-service
  namespace: beeshoes
spec:
  selector:
    app: beeshoes-be
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
